# rust-anki-connect-wrapper

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs
src/endpoints/: card_actions.rs  deck_actions.rs  gui_actions.rs  media_actions.rs  misc_actions.rs  mod.rs  model_actions.rs  note_actions.rs  request.rs  statistic_actions.rs
src/models/: browser_column.rs  card_review.rs  deck_stats.rs  gui_browse_options.rs  media_source.rs  mod.rs  order.rs  request_body.rs  response_body.rs
tests/stateless/: are_due.rs  card_reviews.rs  find_cards.rs  get_collection_stats_html.rs  get_deck_stats.rs  get_ease_factors.rs  get_latest_review_id.rs  get_media_dir_path.rs  get_media_files_names.rs  get_num_cards_reviewed_by_day.rs  get_reviews_of_cards.rs  mod.rs  model_styling.rs  version.rs
