[package]
name = "ankiconnect"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
openssl-sys = "0.9.109"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }

[lib]
